--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "type": "git",
     "url": "https://github.com/gabrielbull/react-desktop.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bezier-easing": "^1.1.1"
+  },
   "peerDependencies": {
     "react": "~0.14",
     "react-dom": "~0.14"
